modules/gdscript/tests/scripts/analyzer/errors/enum_value_as_type.gd
enum {
	Node
}

func test():
	var a: Node = Node2D.new()
